ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woistdasq-ingress
  namespace: q-personal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - woistdasq.de
      secretName: woistdasq-tls
  rules:
  - host: woistdasq.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: woistdasq
            port:
              number: 8000
