deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woistdasq
  namespace: q-personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: woistdasq
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: woistdasq
    spec:
      containers:
        - name: woistdasq
          image: theenbyperor/woistdasq:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: woistdasq
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: woistdasq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: woistdasq
  namespace: q-personal
spec:
  selector:
    app: woistdasq
  ports:
    - port: 8000
      targetPort: 8000
      name: nginx
